--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -393,25 +393,52 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   position: relative;
   width: 25%;
   float: left;
-  opacity: 0.7;
   overflow: hidden;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-/* line 11, ../sass/awesome.scss */
+/* line 9, ../sass/awesome.scss */
+.more-awesome .each-moment::after {
+  content: "";
+  display: block;
+  background: #333333;
+  opacity: 0.3;
+  position: absolute;
+  -moz-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+/* line 21, ../sass/awesome.scss */
+.more-awesome .each-moment:hover {
+  z-index: 10;
+}
+/* line 23, ../sass/awesome.scss */
+.more-awesome .each-moment:hover p {
+  bottom: 0;
+}
+/* line 26, ../sass/awesome.scss */
+.more-awesome .each-moment:hover::after {
+  opacity: 0;
+}
+/* line 31, ../sass/awesome.scss */
 .more-awesome .each-moment img {
   width: 100%;
 }
-/* line 14, ../sass/awesome.scss */
+/* line 34, ../sass/awesome.scss */
 .more-awesome .each-moment .layer {
   width: 100%;
   height: 100%;
   background-color: red;
   opacity: 0.5;
 }
-/* line 20, ../sass/awesome.scss */
+/* line 40, ../sass/awesome.scss */
 .more-awesome .each-moment p {
   position: absolute;
   width: 100%;
@@ -423,15 +450,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-}
-/* line 29, ../sass/awesome.scss */
-.more-awesome .each-moment:hover {
-  z-index: 10;
-  opacity: 1;
-}
-/* line 32, ../sass/awesome.scss */
-.more-awesome .each-moment:hover p {
-  bottom: 0;
 }
 
 /* line 1, ../sass/new-year.scss */
