--- a/sass/awesome.scss
+++ b/sass/awesome.scss
@@ -5,8 +5,28 @@
 		position: relative;
 		width: 25%;
 		float: left;
-		opacity: 0.7;
-		overflow: hidden;
+		overflow: hidden;		
+		&::after {
+			content: "";
+			display: block;
+			background: rgb(51, 51, 51);
+			opacity: 0.3;
+			position: absolute;
+			@include transition(all 0.2s ease-out);
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+		}
+		&:hover {
+			z-index: 10;
+			p {
+				bottom: 0;
+			}
+			&::after {
+				opacity: 0;
+			}
+		}		
 		@include transition(all 0.3s ease-in-out);
 		img {
 			width: 100%;
@@ -26,12 +46,6 @@
 			color: white;
 			@include transition(all 0.3s ease-in-out);			
 		}
-		&:hover {
-			z-index: 10;
-			opacity: 1;
-			p {
-				bottom: 0;
-			}
-		}
+
 	}
 }
